# py-xline

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/protobuf/: action.yaml
client/: __about__.py  __init__.py  auth.py  client.py  cluster.py  error.py  kv.py  lease.py  lock.py  maintenance.py  protocol.py  txn.py  watch.py
src/curp/: curp_test.py  retry.py  retry_test.py  unary.py
src/rpc/: __init__.py  connect.py  type.py
tests/: auth_test.py  cluster_test.py  kv_test.py  lease_test.py  lock_test.py  maintenance_test.py  protocol_test.py  watch_test.py
